<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/card">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@color/card">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_nama_d"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/card"
                    android:hint="@string/txt_nama_d"
                    android:textColor="@color/tulisan_gelap"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="8dp"
                android:background="@color/card">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_nama_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/card"
                    android:hint="@string/txt_nama_b"
                    android:textColor="@color/tulisan_gelap"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="8dp"
                android:background="@color/card">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_notelp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/card"
                    android:hint="@string/txt_notelp"
                    android:textColor="@color/tulisan_gelap"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="176dp"
                android:layout_marginEnd="8dp"
                android:background="@color/card">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/card"
                    android:hint="@string/txt_email"
                    android:textColor="@color/tulisan_gelap"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="232dp"
                android:layout_marginEnd="8dp"
                android:background="@color/card">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_catatan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/card"
                    android:hint="@string/txt_catatan"
                    android:textColor="@color/tulisan_gelap"/>
            </com.google.android.material.textfield.TextInputLayout>

            <NumberPicker
                android:id="@+id/number_picker_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="158dp"
                android:layout_marginTop="302dp"
                android:layout_marginBottom="8dp"
                android:background="@color/card" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:layout_marginTop="375dp"
                android:fontFamily="sans-serif"
                android:background="@color/card"
                android:text="@string/txt_prioritas"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:textColor="@color/tulisan_gelap"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>